# ivaraasenbm

./: index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: release.yml
landing/: index.html
src/: App.css  App.jsx  DiffView.jsx  GenerateModal.jsx  Toolbar.jsx  diff.js  index.css  ollama.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
