[package]
name = "ivaraasenbm"
version = "0.1.0"
description = "Ivar Aasen BM — Norwegian writing assistant"
authors = []
edition = "2021"

[lib]
name = "ivaraasenbm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "ivaraasenbm"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
